--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "watchify index.js -o build.js"
+    "dev": "watchify index.js -o build.js",
+    "build": "browserify index.js > build.js"
   },
   "keywords": [],
   "author": "",
